You can see webGL build of Mirror Networking tanks on localhost:80 after docker-compose up <3

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       context: ./docker/dedicated-linux-server
     ports:
       - "7777:7777/udp"
+      - "7778:7778/udp"
 
   proxy:
     image: nginx:alpine
