--- a/docker/reverse-proxy/reverse-proxy.conf
+++ b/docker/reverse-proxy/reverse-proxy.conf
@@ -1,20 +1,15 @@
-# HTTP reverse proxy to the web service on port 80
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
 
-  location / {
-    proxy_pass http://web:8080;
-  }
-}
+    location / {
+        proxy_pass http://tanks_web_client:80;
+    }
 
-# UDP reverse proxy to the udp service on port 7777
-server {
-  listen 7777 udp;
-  server_name localhost;
+    location /udp {
+        proxy_pass http://tanks_server:7777;
+    }
 
-  location / {
-    udp_nopush on;
-    proxy_pass udp://udp:7777;
-  }
+    location /ws {
+        proxy_pass http://tanks_server:7778;
+    }
 }
