--- a/docker/reverse-proxy/reverse-proxy.conf
+++ b/docker/reverse-proxy/reverse-proxy.conf
@@ -1,15 +1,27 @@
 server {
     listen 80;
-
     location / {
         proxy_pass http://tanks_web_client:80;
     }
+}
 
-    location /udp {
+server {
+    listen 7777;
+    location / {
         proxy_pass http://tanks_server:7777;
     }
+}
 
-    location /ws {
+server {
+    listen 7778;
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+
         proxy_pass http://tanks_server:7778;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
